change int title

--- a/design-story/index.html
+++ b/design-story/index.html
@@ -47,7 +47,7 @@
 					<div class="handle">
 						<div class="slide" data-content="content-0">
 							<div class="img-wrap"><img src="img/0.jpg" alt="Image: The Thames Tunnel (opened 1843). Cement was used in the world's first underwater tunnel" title="Image: The Thames Tunnel (opened 1843). Cement was used in the world's first underwater tunnel"/></div>
-							<h2>Strolling through design history<span>A collection of creative common articles and images about the European &amp; US-American history of design</span></h2>
+							<h2>Strolling through the history of design<span>A collection of creative common articles and images about the European &amp; US-American history of design</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 						<div class="slide" data-content="content-1">
