--- a/design-story/index.html
+++ b/design-story/index.html
@@ -8,14 +8,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>Design History.</title>
 		<meta name="description" content="history of design" />
-		<meta property="og:title" content="Strolling through the history of design - Ferry to Ginger" />
+		
+		
+		<meta property='og:url' content='http://ferrytoginger.github.io/design-story/' />
+        <meta property='og:type' content='website' />
+        <meta property="og:title" content="Strolling through the history of design - Ferry to Ginger" />
         <meta property="og:description" content="a slideshow based on a collection creative common articles and images from wikipedia guiding through European and US history of design." />
-        <meta property="article:tag" content="facebook">
-        <meta property="article:tag" content="Open Graph">
-        <meta property="article:tag" content="Social Media">
-        <meta property="article:tag" content="seo">
         <meta property="og:image" content="http://ferrytoginger.github.io/design-story/img/screenshot-design-history" />
+        <meta property="og:image:url" content="http://ferrytoginger.github.io/design-story/img/screenshot-design-history" />
 		<meta name="author" content="Joanna Soyka" />
+		
+		
+		
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:100,400,600,800' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
