--- a/design-story/index.html
+++ b/design-story/index.html
@@ -15,7 +15,7 @@
         <meta property="og:title" content="Strolling through the history of design - Ferry to Ginger" />
         <meta property="og:description" content="a slideshow based on a collection creative common articles and images from wikipedia guiding through European and US history of design." />
         <meta property="og:image" content="https://ferrytoginger.github.io/design-story/design-story/img/screenshot-design-history.jpg" />
-        <meta property="og:image:url" content="ferrytoginger.github.io/design-story/design-story/img/screenshot-design-history.jpg" />
+        <meta property="og:image:url" content="https://ferrytoginger.github.io/design-story/design-story/img/screenshot-design-history.jpg" />
 		<meta name="author" content="Joanna Soyka" />
 		
 		
