--- a/design-story/index.html
+++ b/design-story/index.html
@@ -7,16 +7,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>Design History.</title>
-		<meta name="description" content="history of design" />
+		<meta name="description" content="History of design" />
+		<meta name="author" content="Joanna Soyka" />
 		
-		
+		<!-- open graph properties -->
 		<meta property='og:url' content='http://ferrytoginger.github.io/design-story/' />
         <meta property='og:type' content='website' />
         <meta property="og:title" content="Strolling through the history of design - Ferry to Ginger" />
         <meta property="og:description" content="a slideshow based on a collection creative common articles and images from wikipedia guiding through European and US history of design." />
         <meta property="og:image" content="https://ferrytoginger.github.io/design-story/img/screenshot-design-history.jpg" />
         <meta property="og:image:url" content="https://ferrytoginger.github.io/design-story/img/screenshot-design-history.jpg" />
-		<meta name="author" content="Joanna Soyka" />
+        <meta property='og:image:width' content='1025' />
+        <meta property='og:image:height' content='665' />
+        <meta property='og:image:type' content='image/jpg' />
+		<!-- end open graph -->
 		
 		
 		
