--- a/design-story/index.html
+++ b/design-story/index.html
@@ -13,7 +13,7 @@
 		<!-- open graph properties -->
 		<meta property='og:url' content='http://ferrytoginger.github.io/design-story/' />
         <meta property='og:type' content='website' />
-        <meta property="og:title" content="Strolling through the history of design - A slideshow by Joanna Soyka" />
+        <meta property="og:title" content="Strolling through the history of design" />
         <meta property="og:description" content="A slideshow based on a collection creative common articles and images from wikipedia guiding through European and US history of design." />
         <meta property="og:image" content="https://ferrytoginger.github.io/design-story/img/screenshot-design-history.jpg" />
         
