--- a/design-story/index.html
+++ b/design-story/index.html
@@ -130,7 +130,7 @@
 					<div class="content" data-content="content-0">
 						<h2>Design history in slides<span></span></h2>
 						<p class="wiki-break"><a href="http://www.ferrytoginger.com" target="_blank" title="Go to ferrytoginger.com">Joanna Soyka, ferrytoginger.com</a></p>
-						<p>a slideshow based on a collection creative common articles and images from wikipedia guiding through European and US design history -- starting with the industrial revolution and coming to halt safely right before it gets digital. On the <a href="http://tympanus.net/codrops/?p=19332" target="_blank">codrops</a> site I discovered this <a href="http://tympanus.net/codrops/?p=19332" target="_blank">navigation concept</a>. The effect is created with the <a href="http://skidding.github.io/dragdealer/" target="_blank">Dragdealer.js</a> library and 3D transforms.</p>
+						<p>A slideshow based on a collection creative common articles and images from wikipedia guiding through European and US design history -- starting with the industrial revolution and coming to halt safely right before it gets digital. Based on a <a href="http://tympanus.net/codrops/?p=19332" target="_blank">navigation concept</a> found on <a href="http://tympanus.net/codrops/?p=19332" target="_blank">codrops</a>. The effect is created with the <a href="http://skidding.github.io/dragdealer/" target="_blank">Dragdealer.js</a> library and 3D transforms.</p>
 						<p>This is a work in progress. If you have ideas, critique, additions, you would like to share, or know about other free resources about design history, please let me know.</p>
                        
 						<p class="related">
